# Incalmo

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
config/: config.example.json
docs/: VERIFICATION_GUIDE.md
equifax/: docker-compose.segmented.yml  docker-compose.yml  gen-keys.sh  redeploy_relay.sh
equifax/attacker/: Dockerfile
equifax/database/: Dockerfile  data.json
equifax/webserver/: Dockerfile
equifax/webserver/attack/: config.py  findinfo.py  run_attack.py  runners.py
equifax/webserver/ssh/: config
incalmo/: __init__.py  orchestrator.py  settings.py
incalmo/core/actions/: high_level.py  low_level.py
incalmo/core/agents/: __init__.py  base_agent.py  exfiltrate_agent.py  find_info_agent.py  lateral_move_agent.py  nmap_parser.py  scan_agent.py
incalmo/core/exploits/: base.py
incalmo/core/models/: __init__.py  credential.py  host.py  network_state.py  service.py  subnet.py  vulnerability.py
incalmo/core/services/: __init__.py  attack_graph_service.py  cnc_service.py  environment_state_service.py  exfil_receiver.py
incalmo/core/strategy/: base.py  equifax_baseline.py  llm_planning.py  route_planner.py
incalmo/llm/: client.py  prompts.py
range/: README.md
tests/: test_attack_graph_service.py  test_environment_state_service.py  test_models.py  test_scan_agent.py
